Time: 1 ms (99.95%), Space: 45.4 MB (84.67%) - LeetHub